push skill resolve candicate search mentor add skill